# pavumeter

./: Makefile.am  bootstrap.sh  configure.ac
doc/: Makefile.am  README.html.in  style.css
src/: Makefile  Makefile.am  pavumeter-record.desktop  pavumeter.desktop  vumeter.cc
